<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AchatRapideNfc</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_magasin">Liste des Magasins </string>
    <string name="title_activity_favoris">Produits favoris</string>
    <string name="title_activity_liste_noire">Liste noire</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_comparaison">Comparer deux Produits</string>
    <string name="title_activity_liste_produits">Liste des produits</string>
    <string name="title_activity_produits_aacheter">Liste produits à acheter</string>
    <string name="menuAccueil">Accueil</string>
    <string name="menuMagasins">Liste des magasins</string>
    <string name="menuProduitsAAcheter">Produits à acheter</string>
    <string name="menuProduitsFavoris">Produits favoris</string>
    <string name="menuListeNoire">Liste noire</string>
    <string name="menuScannerUnProduit">Scanner un Produit</string>
    <string name="menuComparerDeuxProduits">Comparer deux Produits</string>
    <string name="utilisateur">Utilisateur</string>
    <string name="motDePasse">Mot de passe</string>
    <string name="boutonConnexion">Connexion</string>
    <string name="inscription">Pas encore inscrit? Inscrivez-vous de suite!</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="adresseMail">Adresse Email</string>
    <string name="login">Login</string>
    <string name="mdp">Mot de passe</string>
    <string name="boutonValiderInscription">Valider Inscription</string>
    <string name="texteComparaison">"Comparer par rapport à la/aux" </string>
    <string name="produit1">Produit 1?</string>
    <string name="produit2">Produit 2</string>
    <string name="propositionDeScannerProduit">Scannez le premier produit</string>
    <string name="propositionDeScannerProduit2">Scannez le deuxième produit</string>
    <string name="meilleurProduit"></string>
    <string name="boutonComparaison">Comparer</string>
    <string name="boutonAcheterMeilleurProduit">Acheter le meilleur produit</string>
    <string name="title_activity_information_produit">Informations Produit</string>
    <string name="checkFavoris"> Ajouter dans liste favoris</string>
    <string name="checkListeNoire"> Ajouter dans liste Noire</string>
    <string name="intituleNomProduit">Nom :</string>
    <string name="intitulePrixProduit">Prix:</string>
    <string name="intituleTypeProduit">Type:</string>
    <string name="intituleMagasin">Magasin:</string>
    <string name="intituleSourceProduit">Source:</string>
    <string name="scannerProduit">"Scannez votre produit!"</string>
    <string name="nomProduit">"       "</string>
    <string name="prixProduit">"       "</string>
    <string name="typeProduit">"       "</string>
    <string name="magasinProduit">"       "</string>
    <string name="sourceProduit">"       "</string>
    <string name="hello_world">Hello world!</string>
    <string name="boutonListeMagasins">Liste des magasins</string>
    <string name="boutonProduitsAAcheter">Produits à acheter</string>
    <string name="boutonProduitsFavoris">Produits favoris</string>
    <string name="boutonListeNoire">Liste noire</string>
    <string name="boutonScannerProduit">Scanner produit</string>
    <string name="boutonComparerDeuxProduits">Comparer deux produits</string>
    <string name="texteDeBienvenue">Bienvenue sur Achat Rapide NFC!</string>
    <string name="scannerProduitAAcheter">Scannez un produit à acheter!</string>
    <string name="prixTotal">Total: %1$.2f</string>

</resources>
