<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002F2F"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/texteDeBienvenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texteDeBienvenue"
        style="@style/texteStyle1"
        />

    <Button
        android:id="@+id/boutonListeMagasins"
        style="@style/boutonsStyle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonListeMagasins" 
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/boutonProduitsAAcheter"
        style="@style/boutonsStyle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonProduitsAAcheter" />

    <Button
        android:id="@+id/boutonProduitsFavoris"
        style="@style/boutonsStyle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonProduitsFavoris" />

    <Button
        android:id="@+id/boutonListeNoire"
        style="@style/boutonsStyle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonListeNoire" />

    <Button
        android:id="@+id/boutonScannerProduit"
        style="@style/boutonsStyle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonScannerProduit" />

    <Button
        android:id="@+id/boutonComparerDeuxProduits"
        style="@style/boutonsStyle1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonComparerDeuxProduits" />

</LinearLayout>