<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#002F2F"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/nom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/nom"
        android:inputType="textMultiLine"
        android:lines="1" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/prenom"
        android:inputType="textMultiLine"
        android:lines="1" />

    <EditText
        android:id="@+id/adresseMail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/adresseMail"
        android:inputType="textEmailAddress"
        android:lines="1" />

    <EditText
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/login"
        android:inputType="textMultiLine"
        android:lines="1" />

    <EditText
        android:id="@+id/mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:lines="1" />

    <Button
        android:id="@+id/boutonValiderInscription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/boutonValiderInscription" />

</LinearLayout>