<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#CEE3F6"
    tools:context="application_commerciale.coursesnfc.MainActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/nomUtilisateur"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/utilisateur"
        android:inputType="textMultiLine"
        android:lines="1" />
     
     <EditText
        android:id="@+id/motDePasse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="2"
        android:hint="@string/motDePasse"
        android:inputType="textMultiLine"
        android:lines="1" />
     
     <Button
         android:id="@+id/boutonConnexion"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/boutonConnexion" />

</LinearLayout>
